<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/basebar"
                layout="@layout/base_bar"></include>

            <LinearLayout
                android:id="@+id/llayout_mine_self"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp110"
                android:background="@color/white"
                android:gravity="center_vertical">

                <bbs.com.xinfeng.bbswork.widget.CircleImageView
                    android:id="@+id/iv_mine_head"
                    android:layout_width="@dimen/dp70"
                    android:layout_height="@dimen/dp70"
                    android:layout_marginLeft="@dimen/dp20"
                    android:layout_marginRight="@dimen/dp18"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icon_head_default" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_mine_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp15" />

                    <TextView
                        android:id="@+id/txt_mine_introduce"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp14"
                        android:textColor="@color/input_txt_lenght"
                        android:textSize="@dimen/sp13" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp15"
                    android:layout_marginRight="@dimen/dp15"
                    android:src="@drawable/icon_next" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llayout_mine_theme"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp49"
                android:layout_marginTop="@dimen/dp16"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/dp26"
                        android:layout_height="@dimen/dp26"
                        android:layout_marginLeft="@dimen/dp15"
                        android:layout_marginRight="@dimen/dp17"
                        android:src="@drawable/icon_mine_theme" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mine_theme"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp16" />

                    <TextView
                        android:id="@+id/txt_mine_theme_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_txt_lenght"
                        android:textSize="@dimen/sp14" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp20"
                        android:layout_marginRight="@dimen/dp15"
                        android:src="@drawable/icon_next" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp0.5"
                    android:layout_marginLeft="@dimen/dp58"
                    android:background="@color/line_color"></View>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llayout_mine_reply"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp49"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/dp26"
                        android:layout_height="@dimen/dp26"
                        android:layout_marginLeft="@dimen/dp15"
                        android:layout_marginRight="@dimen/dp17"
                        android:src="@drawable/icon_mine_reply" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mine_reply"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp16" />

                    <TextView
                        android:id="@+id/txt_mine_reply_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_txt_lenght"
                        android:textSize="@dimen/sp14" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp20"
                        android:layout_marginRight="@dimen/dp15"
                        android:src="@drawable/icon_next" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp0.5"
                    android:layout_marginLeft="@dimen/dp58"
                    android:background="@color/line_color"></View>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llayout_mine_follow"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp49"
                android:layout_marginTop="@dimen/dp16"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/dp26"
                        android:layout_height="@dimen/dp26"
                        android:layout_marginLeft="@dimen/dp15"
                        android:layout_marginRight="@dimen/dp17"
                        android:src="@drawable/icon_mine_follow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mine_follow"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp16" />

                    <TextView
                        android:id="@+id/txt_mine_follow_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_txt_lenght"
                        android:textSize="@dimen/sp14" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp20"
                        android:layout_marginRight="@dimen/dp15"
                        android:src="@drawable/icon_next" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp0.5"
                    android:layout_marginLeft="@dimen/dp58"
                    android:background="@color/line_color"></View>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llayout_mine_fans"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp49"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/dp26"
                        android:layout_height="@dimen/dp26"
                        android:layout_marginLeft="@dimen/dp15"
                        android:layout_marginRight="@dimen/dp17"
                        android:src="@drawable/icon_mine_fans" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mine_fans"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp16" />

                    <TextView
                        android:id="@+id/txt_mine_fans_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_txt_lenght"
                        android:textSize="@dimen/sp14" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp20"
                        android:layout_marginRight="@dimen/dp15"
                        android:src="@drawable/icon_next" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp0.5"
                    android:layout_marginLeft="@dimen/dp58"
                    android:background="@color/line_color"></View>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llayout_mine_blacks"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp49"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/dp26"
                        android:layout_height="@dimen/dp26"
                        android:layout_marginLeft="@dimen/dp15"
                        android:layout_marginRight="@dimen/dp17"
                        android:src="@drawable/icon_mine_blacklist" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mine_blacks"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp16" />

                    <TextView
                        android:id="@+id/txt_mine_blacks_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_txt_lenght"
                        android:textSize="@dimen/sp14" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp20"
                        android:layout_marginRight="@dimen/dp15"
                        android:src="@drawable/icon_next" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp0.5"
                    android:layout_marginLeft="@dimen/dp58"
                    android:background="@color/line_color"></View>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llayout_setting"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp49"
                android:layout_marginTop="@dimen/dp16"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/dp26"
                        android:layout_height="@dimen/dp26"
                        android:layout_marginLeft="@dimen/dp15"
                        android:layout_marginRight="@dimen/dp17"
                        android:src="@drawable/icon_mine_setting" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/mine_setting"
                        android:textColor="@color/black"
                        android:textSize="@dimen/sp16" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp20"
                        android:layout_marginRight="@dimen/dp15"
                        android:src="@drawable/icon_next" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp0.5"
                    android:layout_marginLeft="@dimen/dp58"
                    android:background="@color/line_color"></View>

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</layout>